ingress-nginx/oauth2_proxy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oauth2-proxy
  namespace: ingress-nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: oauth2-proxy
  template:
    metadata:
      labels:
        app: oauth2-proxy
    spec:
      volumes:
      - name: oauth2-proxy
        secret:
          secretName: oauth2-proxy
      containers:
      - name: oauth2-proxy
        image: quay.io/pusher/oauth2_proxy:v4.1.0
        ports:
        - name: oauth2-proxy
          containerPort: 4180
        livenessProbe:
          httpGet:
            path: /ping
            port: oauth2-proxy
          initialDelaySeconds: 5
          periodSeconds: 5
        volumeMounts:
        - mountPath: /etc/oauth2-proxy
          name: oauth2-proxy
          readOnly: true
        args:
        - -upstream=file:///dev/null
        - -set-xauthrequest
        - -cookie-domain=.desertbluffs.com
        - -whitelist-domain=.desertbluffs.com
        - -http-address=0.0.0.0:4180
        - -config=/etc/oauth2-proxy/config
        - -authenticated-emails-file=/etc/oauth2-proxy/authenticated-emails
        - -cookie-httponly=true
        - -cookie-secure=true
        - -cookie-expire=168h0m
        - -cookie-refresh=60m
